<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/heuristic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heuristic_text" />
        
        <Button
            android:id="@+id/structure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/structure_text" />
        
        <Button
            android:id="@+id/critics_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critics_text" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
   
        <Button
            android:id="@+id/context_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/context_text" />
        
        <Button
            android:id="@+id/artifact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artifact_text" />
        
        <Button
            android:id="@+id/creator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creator_text" />
    </LinearLayout>
    
</LinearLayout>
